# diesel-derive-intermediate

./: .travis.yml  Cargo.toml  README.md  README.tpl
src/: lib.rs
tests/: begin.rs  diesel-interaction.rs
