[package]
name = "diesel-derive-intermediate"
version = "0.1.0"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3.10"

[dev-dependencies]
diesel = { version = "0.15.0", features = ["sqlite"] }
diesel_codegen = { version = "0.15.0", features = ["sqlite"] }
